--- a/src/components/jumbotron/Jumbotron.module.css
+++ b/src/components/jumbotron/Jumbotron.module.css
@@ -20,8 +20,8 @@
   width: 100%;
   height: 100%;
   top: 0;
-  position: relative;
   z-index: -5;
+  position: relative;
 }
 
 .videoBackground {
@@ -35,13 +35,11 @@
 
 .content {
   padding-left: 5%;
-  margin-top: 33vh;
   padding-right: 15px;
   text-align: left;
   max-width: 72%;
   position: absolute;
-  top: 0;
-  z-index: 0;
+  top: 33vh;
 }
 
 .title {
@@ -59,17 +57,24 @@
   font-size: 24px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .container {
     height: 95vh;
+    position: relative;
+    margin-top: 0px !important;
     margin-bottom: 32px;
-    margin-top: -68px !important;
   }
 
   .content {
     max-width: 100%;
     padding-right: 5%;
     padding-top: 2.5vh;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .content {
+    top: 20vh;
   }
 
   .title {
@@ -79,9 +84,5 @@
 
   .text {
     font-size: 18px;
-  }
-
-  .readMore {
-    display: none;
   }
 }
